--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,4 +30,4 @@ jobs:
           
       - name: Run Deploy Script
         run: |
-          gcloud --quiet compute ssh --zone "us-east1-b" "top-tier-web-server-plz-no-charge-google" --project "cis367" --command 'sudo cd ../../var/www/html && sudo git pull'
+          gcloud --quiet compute ssh --zone "us-east1-b" "top-tier-web-server-plz-no-charge-google" --project "cis367" --command 'cd ../../var/www/html && sudo git pull'
